--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile
 #
+asgiref==3.4.1
+    # via django
 certifi==2021.10.8
     # via requests
 charset-normalizer==2.0.12
@@ -14,6 +16,14 @@ dataclasses==0.8
     # via
     #   torch
     #   transformers
+django==3.2.12
+    # via
+    #   -r requirements.in
+    #   djangorestframework
+djangorestframework==3.13.1
+    # via -r requirements.in
+et-xmlfile==1.1.0
+    # via openpyxl
 filelock==3.4.1
     # via
     #   huggingface-hub
@@ -52,6 +62,8 @@ numpy==1.19.5
     #   sentence-transformers
     #   torchvision
     #   transformers
+openpyxl==3.0.9
+    # via -r requirements.in
 packaging==21.3
     # via
     #   huggingface-hub
@@ -65,7 +77,10 @@ pyparsing==3.0.7
 python-dateutil==2.8.2
     # via pandas
 pytz==2021.3
-    # via pandas
+    # via
+    #   django
+    #   djangorestframework
+    #   pandas
 pyyaml==6.0
     # via
     #   huggingface-hub
@@ -98,6 +113,8 @@ six==1.16.0
     #   nltk
     #   python-dateutil
     #   sacremoses
+sqlparse==0.4.2
+    # via django
 threadpoolctl==3.1.0
     # via scikit-learn
 tokenizers==0.11.6
@@ -120,6 +137,7 @@ transformers==4.17.0
     #   sentence-transformers
 typing-extensions==4.1.1
     # via
+    #   asgiref
     #   huggingface-hub
     #   importlib-metadata
     #   torch
