--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,8 @@ djangorestframework==3.13.1
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
+fasttext==0.9.2
+    # via -r requirements.in
 filelock==3.4.1
     # via
     #   huggingface-hub
@@ -56,6 +58,7 @@ nltk==3.3
 numpy==1.19.5
     # via
     #   -r requirements.in
+    #   fasttext
     #   pandas
     #   scikit-learn
     #   scipy
@@ -72,6 +75,8 @@ pandas==1.1.5
     # via -r requirements.in
 pillow==8.4.0
     # via torchvision
+pybind11==2.9.1
+    # via fasttext
 pyparsing==3.0.7
     # via packaging
 python-dateutil==2.8.2
@@ -149,3 +154,6 @@ zipp==3.6.0
     # via
     #   importlib-metadata
     #   importlib-resources
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
